feat: remove front end and add api to update pallet general information
