# SupplyInventory/Application/Controllers/PalletController.go
@@ -18,11 +18,12 @@ func NewPalletController(service services.PalletService) *PalletController {
 	return &PalletController{service: service}
 }
 
-func (pc *PalletController) Register(group *gin.RouterGroup) {
-	group.GET("/", pc.ListPallets)
-	group.GET("/:id", pc.FindPalletById)
-	group.POST("/", pc.CreatePallet)
-	group.DELETE("/:id", pc.DeletePalletById)
+func (controller *PalletController) Register(group *gin.RouterGroup) {
+	group.GET("/", controller.ListPallets)
+	group.GET("/:id", controller.FindPalletById)
+	group.PATCH("/:id", controller.UpdatePallet)
+	group.POST("/", controller.CreatePallet)
+	group.DELETE("/:id", controller.DeletePalletById)
 }
 
 // @Summary List pallets
@@ -32,8 +33,8 @@ func (pc *PalletController) Register(group *gin.RouterGroup) {
 // @Success 200 {array} domain.PalletEntity
 // @Failure 404 "Not Found"
 // @Router /api/v1/pallets [get]
-func (pc *PalletController) ListPallets(c *gin.Context) {
-	pallets, appErr := pc.service.ListPallets()
+func (controller *PalletController) ListPallets(c *gin.Context) {
+	pallets, appErr := controller.service.ListPallets()
 	if appErr != nil {
 		c.JSON(appErr.ErrorCode(), appErr.Error())
 	}
@@ -49,14 +50,14 @@ func (pc *PalletController) ListPallets(c *gin.Context) {
 // @Failure 404 "Not Found"
 // @Param id path int true "ID do pallet"
 // @Router /api/v1/pallets/{id} [get]
-func (pc *PalletController) FindPalletById(c *gin.Context) {
+func (controller *PalletController) FindPalletById(c *gin.Context) {
 	id, err := requestsHelper.GetIDParam(c, "id")
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"message": "ID inválido"})
 		return
 	}
 
-	pallet, appErr := pc.service.FindPalletById(id)
+	pallet, appErr := controller.service.FindPalletById(id)
 	if pallet == nil {
 		c.JSON(appErr.ErrorCode(), gin.H{"message": appErr.Error()})
 		return
@@ -76,14 +77,14 @@ func (pc *PalletController) FindPalletById(c *gin.Context) {
 // @Failure 500 {object} map[string]string
 // @Param id path int true "ID do pallet"
 // @Router /api/v1/pallets/{id} [delete]
-func (pc *PalletController) DeletePalletById(c *gin.Context) {
+func (controller *PalletController) DeletePalletById(c *gin.Context) {
 	id, err := requestsHelper.GetIDParam(c, "id")
 	if err != nil {
 		c.JSON(http.StatusUnprocessableEntity, gin.H{"message": "ID inválido"})
 		return
 	}
 
-	result, appErr := pc.service.DeletePalletById(id)
+	result, appErr := controller.service.DeletePalletById(id)
 
 	if appErr != nil {
 		c.JSON(appErr.ErrorCode(), gin.H{"message": appErr.Error()})
@@ -101,14 +102,14 @@ func (pc *PalletController) DeletePalletById(c *gin.Context) {
 // @Success 200 {object} domain.PalletEntity
 // @Failure 422 {object} map[string]string
 // @Router /api/v1/pallets [post]
-func (pc *PalletController) CreatePallet(c *gin.Context) {
+func (controller *PalletController) CreatePallet(c *gin.Context) {
 	var req requests.PalletRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
 		return
 	}
 
-	newPallet, appErr := pc.service.CreatePallet(req.Name, req.PalletRackID)
+	newPallet, appErr := controller.service.CreatePallet(req.Name, req.PalletRackID)
 
 	if appErr != nil {
 		c.JSON(appErr.ErrorCode(), gin.H{"message": appErr.Error()})
@@ -116,4 +117,35 @@ func (pc *PalletController) CreatePallet(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, newPallet)
+}
+
+// @Summary Update Pallet
+// @Tags Pallets
+// @Accept json
+// @Produce json
+// @Param pallet body requests.PalletRequest true "Palletized Product"
+// @Success 200 {object} domain.PalletEntity
+// @Failure 422 {object} map[string]string
+// @Param id path int true "ID do pallet"
+// @Router /api/v1/pallets/{id} [patch]
+func (controller *PalletController) UpdatePallet(c *gin.Context) {
+	id, err := requestsHelper.GetIDParam(c, "id")
+	if err != nil {
+		c.JSON(http.StatusUnprocessableEntity, gin.H{"message": "ID inválido"})
+		return
+	}
+
+	var req requests.PalletRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
+		return
+	}
+
+	pallet, appErr := controller.service.UpdatePallet(id, req.Name, req.PalletRackID)
+	if pallet == nil {
+		c.JSON(appErr.ErrorCode(), gin.H{"message": appErr.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, pallet)
 }
