# docs/swagger.json
@@ -278,6 +278,53 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Pallets"
+                ],
+                "summary": "Update Pallet",
+                "parameters": [
+                    {
+                        "description": "Palletized Product",
+                        "name": "pallet",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.PalletRequest"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID do pallet",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.PalletEntity"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/v1/racks": {
@@ -502,11 +549,16 @@
         "domain.PalletRackEntity": {
             "type": "object",
             "required": [
-                "name"
+                "location",
+                "name",
+                "total_capacity"
             ],
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "location": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
@@ -516,6 +568,9 @@
                     "items": {
                         "$ref": "#/definitions/domain.PalletEntity"
                     }
+                },
+                "total_capacity": {
+                    "type": "integer"
                 }
             }
         },
@@ -543,11 +598,20 @@
         "requests.PalletRackRequest": {
             "type": "object",
             "required": [
-                "name"
+                "location",
+                "name",
+                "totalCapacity"
             ],
             "properties": {
+                "location": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
+                },
+                "totalCapacity": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
